--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -18,14 +18,17 @@
       align-items: center;
       border: 0.5px solid lightgray;
       padding: 3px;
+      width: 23%;
 
       input {
+        width: 100%;
         border: none;
         outline: none;
         background: transparent;
 
         &::placeholder {
           font-size: 12px;
+          padding-left: 5px;
         }
       }
     }
